--- a/APPLI/OPERATION_CATEGORY/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_CATEGORY/LISTS/HTML/RECORDS.HTML
@@ -10,10 +10,10 @@
             <input type="text" name="OPERATION_CATEGORY_NAME_%2" id="OPERATION_CATEGORY_NAME_%2" value="%3" class="form-control" />
         </td>
         <td>
-            <a href="" class="btn btn-default" id="OPERATION_CATEGORY_EDIT_%2" onclick="editOperationCategory(%2); return false;" >EDIT</a>
+            <a href="" class="btn btn-warning" id="OPERATION_CATEGORY_EDIT_%2" onclick="editOperationCategory(%2); return false;" >EDIT</a>
         </td>
         <td>
-            <a class="btn btn-default" id="OPERATION_CATEGORY_DELETE_%2" onclick="deleteOperationCategory(%2);" >DELETE</a>
+            <a class="btn btn-danger" id="OPERATION_CATEGORY_DELETE_%2" onclick="deleteOperationCategory(%2);" >DELETE</a>
         </td>
     </tr>
 <!--RECORDS-->
