--- a/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY.HTML
@@ -1,6 +1,6 @@
-<!--PARTS CATEGORY Records-->
+<!--OPERATION CATEGORY Records-->
 <!--RECORDS-->
-<li name="PARTS_CATEGORY_ID_%1" value="%1">
+<li name="OPERATION_CATEGORY_ID_%1" value="%1">
     <a id="a-%1" onclick="newCategoryChoice(%1); return false;" >%2</a>
 </li>
 !--RECORDS-->
