--- a/APPLI/OPERATION_LIST/SEARCH/HTML/DROPDOWN_LIST.HTML
+++ b/APPLI/OPERATION_LIST/SEARCH/HTML/DROPDOWN_LIST.HTML
@@ -1,7 +1,7 @@
-<!--PARTS SEARCH RESULT DROPDOWN LISTS Records-->
+<!--OPERATION SEARCH RESULT DROPDOWN LISTS Records-->
 
 <!--RECORDS-->
-    <li class="list-parts" id="list-###ROW###-%1" value="%1"><a>%4</a></li>
-    <input type="hidden" id="PARTS_NM_###ROW###_%1" value="%4">
-    <input type="hidden" id="PARTS_PRICE_###ROW###_%1" value="%6">
+    <li class="list-operation" id="list-###ROW###-%1" value="%1"><a>%4</a></li>
+    <input type="hidden" id="OPERATION_NM_###ROW###_%1" value="%4">
+    <input type="hidden" id="OPERATION_PRICE_###ROW###_%1" value="%6">
 <!--RECORDS-->
