--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -35,7 +35,7 @@
         <input type="text" name="PARTS_NAME_JP_%2" id="PARTS_NAME_JP_%2" value="%6" class="form-control input-sm" />
     </td>
     <td>
-        <input type="text" name="PARTS_PRICE_%2" id="PARTS_PRICE_%2" value="%7" class="form-control input-sm" />
+        <input type="number" name="PARTS_PRICE_%2" id="PARTS_PRICE_%2" value="%7" class="form-control input-sm" />
     </td>
     <td>
         <input type="text" name="PARTS_REMARKS_%2" id="PARTS_REMARKS_%2" value="%8" class="form-control input-sm" />
