--- a/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY_LIST.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/CATEGORY_LIST.HTML
@@ -1,4 +1,4 @@
-<!--PARTS CATEGORY Records for List-->
+<!--OPERATION CATEGORY Records for List-->
 <!--RECORDS-->
 <li name="CATEGORY_LIST">
     <a id="cat-list-%1" name="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
