--- a/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
@@ -1,4 +1,4 @@
-<!--PARTS LISTS Records-->
+<!--OPERATION LISTS Records-->
 
 <!--RECORDS-->
 <tr id="edit-row-%2">
@@ -29,22 +29,22 @@
         </div>
     </td>
     <td>
-        <input type="text" name="PARTS_NAME_%2" id="PARTS_NAME_%2" value="%5" class="form-control input-sm" />
+        <input type="text" name="OPERATION_NAME_%2" id="OPERATION_NAME_%2" value="%5" class="form-control input-sm" />
     </td>
     <td>
-        <input type="text" name="PARTS_NAME_JP_%2" id="PARTS_NAME_JP_%2" value="%6" class="form-control input-sm" />
+        <input type="text" name="OPERATION_NAME_JP_%2" id="OPERATION_NAME_JP_%2" value="%6" class="form-control input-sm" />
     </td>
     <td>
-        <input type="text" name="PARTS_PRICE_%2" id="PARTS_PRICE_%2" value="%7" class="form-control input-sm" />
+        <input type="number" name="OPERATION_PRICE_%2" id="OPERATION_PRICE_%2" value="%7" class="form-control input-sm" />
     </td>
     <td>
-        <input type="text" name="PARTS_REMARKS_%2" id="PARTS_REMARKS_%2" value="%8" class="form-control input-sm" />
+        <input type="text" name="OPERATION_REMARKS_%2" id="OPERATION_REMARKS_%2" value="%8" class="form-control input-sm" />
     </td>
     <td>
-        <a href="" class="btn btn-warning btn-sm" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
+        <a href="" class="btn btn-warning btn-sm" id="OPERATION_EDIT_%2" onclick="editOperation(%2); return false;" >EDIT</a>
     </td>
     <td>
-        <a class="btn btn-danger btn-sm" id="PARTS_DELETE_%2" onclick="deleteParts(%2); return false;" >DEL</a>
+        <a class="btn btn-danger btn-sm" id="OPERATION_DELETE_%2" onclick="deleteOperation(%2); return false;" >DEL</a>
     </td>
 </tr>
 <!--RECORDS-->
