--- a/APPLI/ASSESSMENT/NEW/HTML/OPERATION/CATEGORY_LIST.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/OPERATION/CATEGORY_LIST.HTML
@@ -1,4 +1,4 @@
-<!--PARTS CATEGORY Records for List-->
+<!--OPERATION CATEGORY Records for List-->
 <!--RECORDS-->
 <li name="CATEGORY_LIST">
     <a class="category-list" id="cat_list_%1" >%2</a>
