--- a/APPLI/ASSESSMENT/NEW/HTML/OPERATION/CATEGORY_NEW.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/OPERATION/CATEGORY_NEW.HTML
@@ -1,4 +1,4 @@
-<!--PARTS CATEGORY Records for NEW-->
+<!--OPERATION CATEGORY Records for NEW-->
 <!--RECORDS-->
 <li name="CATEGORY_NEW">
     <a class="category-list" id="cat_list_%1" >%2</a>
