--- a/APPLI/ASSESSMENT/NEW/HTML/SET/INPUT.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/SET/INPUT.HTML
@@ -32,8 +32,8 @@
 
             <div class="btn-toolbar">
                 <button class="btn btn-default col-smx-3" />customer</button>
-                <button class="btn btn-default col-smx-3 " />parts</button>
-                <button class="btn btn-info col-smx-3 disabled" />operation</button>
+                <button class="btn btn-info col-smx-3 disabled" />set</button>
+                <button class="btn btn-default col-smx-3" />operation</button>
                 <button class="btn btn-default col-smx-3" />set</button>
                 <button class="btn btn-default col-smx-3" />check</button>
             </div>
@@ -79,6 +79,7 @@
     //HEADページ移動
     $(".btn-toolbar .btn").on('click', function() {
         var temp_no = $("#TEMP_NO").val();
+    alert(temp_no);
         var func = $(this).html().toUpperCase();
         var frm = document.forms['assessment'];
         frm.method = 'GET';
@@ -89,7 +90,7 @@
     //カテゴリを選択
     $(document).on('click', 'a.category-list', function() {
 
-        //選択した作業のidから行を取得する
+        //選択したセットのidから行を取得する
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var row = $(this).parent().parent().attr("name");
@@ -104,32 +105,32 @@
         var input_hidden = document.getElementById('CATEGORY_NO_HID_' + row);
         input_hidden.value = cat_no;
 
-        //作業リストを選択したカテゴリで抽出
+        //セットリストを選択したカテゴリで抽出
         var jqXHR = $.ajax({
             type: 'POST',
-            url: '/APP/OPERATION_LIST/SEARCH/INPUT',
+            url: '/APP/SET_LIST/SEARCH/INPUT',
             data: {
-                OPERATION_CATEGORY_NO: cat_no,
+                SET_CATEGORY_NO: cat_no,
                 ROW: row
             }
         });
         jqXHR.done(function(data) {
             search_result = data;
-            $('#dropdown-operation-' + row).addClass('open');
-            $('#dropdown-operation-list-' + row).html(data);
-            //作業をクリア
-            $('#OPERATION_NM_' + row).val('');
-            $('#OPERATION_NO_HID_' + row).val('');
-            $('#OPERATION_PRICE_' + row).val('');
-            $('#OPERATION_QTY_' + row).val('0');
+            $('#dropdown-set-' + row).addClass('open');
+            $('#dropdown-set-list-' + row).html(data);
+            //セットをクリア
+            $('#SET_NM_' + row).val('');
+            $('#SET_NO_HID_' + row).val('');
+            $('#SET_PRICE_' + row).val('');
+            $('#SET_QTY_' + row).val('0');
         });
         jqXHR.fail(function() {
-            search_result = '一致する作業がありません。';
+            search_result = '一致するセットがありません。';
         });
     });
 
-    //登録済の作業リストの取得
-    $(document).on('click', ':button.btn-operation', function() {
+    //登録済のセットリストの取得
+    $(document).on('click', ':button.btn-set', function() {
         var row = $(this).attr("name");
         var cat_no = $('#CATEGORY_NO_HID_' + row).val();
         var deferred = ajax_func();
@@ -137,22 +138,22 @@
           //done!!
         });
 
-        //作業リストを選択したカテゴリで抽出
+        //セットリストを選択したカテゴリで抽出
         function ajax_func() {
             var deferred = new $.Deferred();
             $.ajax({
                 type: 'POST',
-                url: '/APP/OPERATION_LIST/SEARCH/INPUT',
+                url: '/APP/SET_LIST/SEARCH/INPUT',
                 data: {
-                    OPERATION_CATEGORY_NO: cat_no,
+                    SET_CATEGORY_NO: cat_no,
                     ROW: row
                 }
             }).done(function(data) {
                 search_result = data;
-                $('#dropdown-operation-' + row).addClass('open');
-                $('#dropdown-operation-list-' + row).html(data);
+                $('#dropdown-set-' + row).addClass('open');
+                $('#dropdown-set-list-' + row).html(data);
             }).fail(function() {
-                search_result = '一致する作業がありません。';
+                search_result = '一致するセットがありません。';
             }).always(function() {
                 deferred.resolve();
             });
@@ -161,20 +162,20 @@
     });
 
 
-    //作業選択
-    $(document).on('click', 'li.list-operation', function() {
+    //セット選択
+    $(document).on('click', 'li.list-set', function() {
 
-        //選択したリストのidから行を取得する:list-行-作業番号
+        //選択したリストのidから行を取得する:list-行-セット番号
         var idname = $(this).attr("id"); 
         var list_id = idname.split("-");
         var row = list_id[1];
-        var operationNo = $(this).val();
-        var operationNm = $(this).text();
-        var operationPrice = $('#OPERATION_PRICE_' + row + '_' + operationNo).val();
-        $('#OPERATION_NM_' + row).val(operationNm);
-        $('#OPERATION_PRICE_' + row).val(operationPrice);
-        $('#OPERATION_QTY_' + row).val('1');
-        $('#OPERATION_NO_HID_' + row).val(operationNo);
+        var setNo = $(this).val();
+        var setNm = $(this).text();
+        var setPrice = $('#SET_PRICE_' + row + '_' + setNo).val();
+        $('#SET_NM_' + row).val(setNm);
+        $('#SET_PRICE_' + row).val(setPrice);
+        $('#SET_QTY_' + row).val('1');
+        $('#SET_NO_HID_' + row).val(setNo);
     });
 
     //数量PLUS
@@ -182,8 +183,8 @@
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var row = list_id[2];
-        var qty = $('#OPERATION_QTY_' + row).val();
-        $('#OPERATION_QTY_' + row).val(parseInt(qty) + parseInt(1));
+        var qty = $('#SET_QTY_' + row).val();
+        $('#SET_QTY_' + row).val(parseInt(qty) + parseInt(1));
     });
 
     //数量MINUS
@@ -191,14 +192,14 @@
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var row = list_id[2];
-        var qty = $('#OPERATION_QTY_' + row).val();
+        var qty = $('#SET_QTY_' + row).val();
         if (parseInt(qty) > 0) {
-            $('#OPERATION_QTY_' + row).val(parseInt(qty) - parseInt(1));
+            $('#SET_QTY_' + row).val(parseInt(qty) - parseInt(1));
         }
     });
 
-    //作業追加
-    $(document).on('click', 'a.btn-operation', function() {
+    //セット追加
+    $(document).on('click', 'a.btn-set', function() {
         var idname = $(this).attr("id"); 
         var list_id = idname.split("_");
         var action = list_id[1];
@@ -207,14 +208,13 @@
         var temp_no = $('#TEMP_NO').val();
         var category_no = $('#CATEGORY_NO_HID_' + row).val();
         var category_nm = $('#CATEGORY_NM_' + row).val();
-        var operation_no = $('#OPERATION_NO_HID_' + row).val();
-        var operation_nm = $('#OPERATION_NM_' + row).val();
-        var operation_price = $('#OPERATION_PRICE_' + row).val();
-        var operation_qty = $('#OPERATION_QTY_' + row).val();
-        alert(temp_no+":"+category_no+":"+category_nm+":"+operation_no+":"+operation_nm+":"+operation_price+":"+operation_qty);
+        var set_no = $('#SET_NO_HID_' + row).val();
+        var set_nm = $('#SET_NM_' + row).val();
+        var set_price = $('#SET_PRICE_' + row).val();
+        var set_qty = $('#SET_QTY_' + row).val();
         var jqXHR = $.ajax({
             type: 'POST',
-            url: '/APP/ASSESSMENT/NEW/OPERATION/COMPLETE',
+            url: '/APP/ASSESSMENT/NEW/SET/COMPLETE',
             /*
             data: { 
               params,
@@ -227,15 +227,15 @@
               TEMP_NO: temp_no,
               CATEGORY_NO: category_no,
               CATEGORY_NM: category_nm,
-              OPERATION_NO: operation_no,
-              OPERATION_NM: operation_nm,
-              OPERATION_PRICE: operation_price,
-              OPERATION_QTY: operation_qty
+              SET_NO: set_no,
+              SET_NM: set_nm,
+              SET_PRICE: set_price,
+              SET_QTY: set_qty
             }
         });
         jqXHR.done(function(data) {
             if (data == 2222) {
-                alert("作業の追加が出来ませんでした。");
+                alert("セットの追加が出来ませんでした。");
             } else {
                 $('intput[type="text"]').each(function() {
                 });
