--- a/APPLI/ASSESSMENT/NEW/HTML/PARTS/INPUT.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/PARTS/INPUT.HTML
@@ -34,7 +34,7 @@
                 <button class="btn btn-default col-smx-3" />customer</button>
                 <button class="btn btn-info col-smx-3 disabled" />parts</button>
                 <button class="btn btn-default col-smx-3" />operation</button>
-                <button class="btn btn-default col-smx-3" />work</button>
+                <button class="btn btn-default col-smx-3" />set</button>
                 <button class="btn btn-default col-smx-3" />check</button>
             </div>
 
