Assessment HTML id repaire

--- a/APPLI/ASSESSMENT/NEW/HTML/PARTS/INPUT.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/PARTS/INPUT.HTML
@@ -99,7 +99,7 @@
 
         //該当のレコードに選択したカテゴリ名を設定
         $('#CATEGORY_NM_' + row).val(choice);
-        $('#CATEGORY_NM_HID' + row).val(choice);
+        $('#CATEGORY_NM_HID_' + row).val(choice);
 
         //該当のレコードに選択したカテゴリ番号を設定
         var input_hidden = document.getElementById('CATEGORY_NO_HID_' + row);
